--- a/css/common.css
+++ b/css/common.css
@@ -4,8 +4,8 @@
 
 body {
   margin: 16px;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #fafafa;
@@ -21,4 +21,24 @@ input {
 button {
   padding: 8px 12px;
   cursor: pointer;
+}
+/* gallery */
+
+.gallery-title {
+  text-align: center;
+}
+.gallery-title a {
+  color: inherit;
+  font-size: 24px;
+  text-decoration: none;
+}
+
+.gallery {
+  display: flex;
+  list-style-type: none;
+  gap: 30px;
+}
+
+.gallery img {
+  max-width: 100%;
 }
